[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atc-openenv"
version = "1.0.0"
description = "Air Traffic Control Sequencing Environment for AI Agents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pyyaml",
    "requests",
    "matplotlib",
    "numpy",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
